<resources>
    <string name="app_name">Currency Notifier</string>
    <string name="avid">© Avid Programmers</string>
    <string name="appNameSplash">Currency Notifier</string>
    <string name="forexValText">The exchange value for 1 %1$s to 1 %2$s is,</string>
    <string name="forex_header">Forex Notifier</string>
    <string name="crypto_header">Crypto Notifier</string>
    <string name="news_header">Finance News</string>
    <string name="check_value_btn">Check Value</string>
    <string name="set_notification_btn">set Notification</string>
    <string name="privacy_policy"><u>Privacy Policy</u></string>
    <string name="dash">|</string>
    <string name="terms_and_conditions"><u><![CDATA[Terms & Conditions]]></u></string>
    <string name="welcome">Welcome!</string>
    <string name="intro_one_text">Now check live Forex values and set notifications from 60+ pairs.\nNever miss a highest rate</string>
    <string name="live_forex_values">Live Forex Values!</string>
    <string name="intro_two_text">Select a currency pair and enter your desired amount for the notification and relax, we will notifiy you when your desired value is reached.\n\nSimple, isn\'t it?</string>
    <string name="notifications">Notifications!</string>
    <string name="always_keep_track_of_the_notifications_at_your_finger_tips">Always keep track of the notifications at your finger tips</string>
    <string name="nine">9</string>
    <string name="zero">0</string>
    <string name="dot">.</string>
    <string name="bottom_sheet_header">Enter the target value for the notification</string>
    <string name="bottom_sheet_button">Notify me!</string>
    <string name="forex_pair">Forex Pair:</string>
    <string name="scheduled_time">Scheduled time:</string>
    <string name="current_value">Current Value</string>
    <string name="target_value">Target Value:</string>
    <string name="notification_status">Notification Status:</string>
    <string name="spinnerimg">spinnerImg</string>
</resources>