<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    tools:context=".ui.MainActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/appNameSplash"
        android:gravity="center"
        android:textSize="28sp"
        android:textColor="@color/white"
        android:fontFamily="@font/open_sans_semibold"
        android:layout_marginTop="40dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:layout_width="140dp"
        android:layout_height="140dp"
        android:background="@drawable/ic_notification"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/avid"
        android:gravity="center"
        android:textSize="16sp"
        android:textColor="@color/white"
        android:fontFamily="@font/open_sans"
        android:layout_marginBottom="40dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginBottom="10dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <TextView
            android:id="@+id/privacyPolicy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/privacy_policy"
            android:textSize="10sp"
            android:textColor="@color/white"
            android:fontFamily="@font/open_sans"
            android:selectAllOnFocus="false"
            android:linksClickable="false"
            android:autoLink="all"/>

        <TextView
            android:id="@+id/dash"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dash"
            android:layout_marginStart="3dp"
            android:layout_marginEnd="3dp"
            android:textSize="10sp"
            android:textColor="@color/white"
            android:fontFamily="@font/open_sans" />

        <TextView
            android:id="@+id/terms"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/terms_and_conditions"
            android:textSize="10sp"
            android:textColor="@color/white"
            android:fontFamily="@font/open_sans"
            android:selectAllOnFocus="false"
            android:linksClickable="false"
            android:autoLink="all"/>



    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>